[package]
# Hakodate Robot Control Server
name = "hrcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
colored = "2.0.0"
dualshock-driver = {git = "https://github.com/motii8128/dualshock-driver"}
